webServiceRegistry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: web-service-registry
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: service-registry
    app.kubernetes.io/name: service-registry
    app.openshift.io/runtime: java
  name: web-service-registry
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-service-registry
  template:
    metadata:
      labels:
        app: web-service-registry
    spec:
      containers:
      - name: web-service-registry
        imagePullPolicy: Always
        image: image-registry.openshift-image-registry.svc:5000/common-service/web_registry:893749880742d9a9dbc56812868c3b6d94f077a6
        ports:
        - containerPort: 8582
          protocol: TCP
