webServiceRegistry/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-service-registry
  name: web-service-registry
spec:
  ports:
  - name: 8582-tcp
    port: 8582
    protocol: TCP
    targetPort: 8582
  selector:
    app: web-service-registry
  sessionAffinity: None
  type: ClusterIP
