webServiceRegistry/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: web-service-registry
  name: web-service-registry
spec:
  port:
    targetPort: 8582-tcp
  to:
    kind: Service
    name: web-service-registry
    weight: 100
